package shurona.wordfinder.word.domain;

public enum WordEditStatus {
    EDITABLE, COMPLETE, REQUEST, DONE
}

