@startuml db schema

object "메모할 것" as memoTemp {
    메모내용
}

entity "User" as user {
    * user_id : number <<generated>>
    --

    loginId: String
    password : String
    nickname : String
    role: Role

    --
    * created_at: Date
    * updated_at: Date
}

entity "JoinWordUser" as userword {
  * user_word_id : UUID <<generated>>
  --
    visible: boolean
    lastSelectedQuiz: Date
  --
  * created_at: Date
  * updated_at: Date
}

entity "Word" as word {
  * word_id : UUID <<generated>>
  --
    word: String
    meaning: String
    status: WordEditStatus
  --
  * created_at: Date
  * updated_at: Date
}

entity "Quiz Set" as quizset {
    * quiz_set_id : number <<generated>>
    --
    user_id: User
    currenct_sequence: Number

    --
    * created_at: Date
    * updated_at: Date
}

entity "Quiz detail" as quizdetail {
    * quiz_detail_id : number <<generated>>
    --
    word_id: Word
    sequence: Number
    isCorrect: Boolean
    received_answer: String
    --
    * created_at: Date
    * updated_at: Date
}

' enum
enum "Role" as role {
  ADMIN
  MEMBER
  NORMAL
}

enum "WordEditStatus" as wordEditStatus {
  EDITABLE
  COMPLETE
  REQUEST
  DONE
}

user ||--|{ userword
userword }|--||word

word <- wordEditStatus
user <- role

user ||--|{ quizset
quizset ||--|{ quizdetail

quizdetail ||--|{ word

@enduml